[package]
name = "folds"

edition = "2021"
version = "0.1.0"

[lints.rust]
unused_qualifications = { level = "warn", priority = 0 }

[lints.rustdoc]
all = { level = "warn", priority = 0 }

[lints.clippy]
all = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

[profile.dev]
opt-level = 0

debug = 0
debug-assertions = true
overflow-checks = true
panic = "abort"
strip = "debuginfo"

codegen-units = 256
incremental = true

lto = false

[profile.release]
opt-level = 3

debug = 0
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = "debuginfo"

codegen-units = 16
incremental = false

lto = "thin"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simple"
harness = false
